@@ -1,5 +1,13 @@
 2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/egg/egg-editable-toolbar.c: (create_item_from_action),
+	(item_added_cb):
+
+	Return early when the action doesn't exist; don't crash.
+	Patch by Peter Harvey.
+
+2005-11-02  Christian Persch  <chpe@cvs.gnome.org>
+
 	* data/ui/epiphany-fs-toolbar.xml:
 
 	Remove spinner from fullscreen toolbars file.
